@@ -7,6 +7,8 @@
   * Fix binfmt_misc for rootless container.
   * Support mount flags as prefix of source.
   * Support tmpfs and overlayfs as mount source.
+  * Unset all environment variables before running container.
+  * Fix: drop CAP_SYS_CHROOT to avoid escape.
 # v3.8:
   * Support more platforms, currently supports: arm64, armv7, armhf, riscv64, i386, loong64, s390x, ppc64le and x86_64.
   * Improve rootless container support.
